# Kraken-Optical-Simulator

./: README.md  pyproject.toml
KrakenOS/: Display.py
KrakenOS/Examples/: Examp_Axicon.py  Examp_Axicon_And_Cylinder.py  Examp_CzernyTurner.py  Examp_Diffraction_Grating_Reflection.py  Examp_Diffraction_Grating_Reflection_Single.py  Examp_Diffraction_Grating_Transmission.py  Examp_Dispersion_By_AbbeNumber.py  Examp_Doublet_Lens-ParaxMatrix.py  Examp_Doublet_Lens.py  Examp_Doublet_Lens_3Dcolor.py  Examp_Doublet_Lens_CommandsSystem.py  Examp_Doublet_Lens_Cylinder.py  Examp_Doublet_Lens_NonSec-AR_Coating.py  Examp_Doublet_Lens_NonSec.py  Examp_Doublet_Lens_Pupil.py  Examp_Doublet_Lens_Pupil_Seidel.py  Examp_Doublet_Lens_Tilt-Nulls.py  Examp_Doublet_Lens_Tilt.py  Examp_Doublet_Lens_Tilt_non_sec-AR-Coating.py  Examp_Doublet_Lens_Tilt_non_sec.py  Examp_Doublet_Lens_Zernike.py  Examp_Doublet_Optimization.py  Examp_ExtraShape_Micro_Lens_Array.py  Examp_ExtraShape_Radial_Sine.py  Examp_ExtraShape_UserFacets.py  Examp_ExtraShape_XY_Cosines.py  Examp_ExtraShape_XY_Cosines_UDA.py  Examp_Flat_Mirror_45Deg.py  Examp_Flat_NonSec_AR-caoating.py  Examp_Fresnel.py  Examp_ParaboleMirror_Shift.py  Examp_ParaboleMirror_Shift_UDA.py  Examp_Perfect_lens.py  Examp_Perfect_lens_Telescope.py  Examp_Pickle_Doublet_Lens_3Dcolor.py  Examp_Prism_STL-AR_coating.py  Examp_Prism_STL.py  Examp_Ray.py  Examp_Refraction_Prism.py  Examp_Refraction_Prism_OneRay.py  (+22 more)
